registeration options
