# backend/schemas.py
@@ -82,9 +82,22 @@ class ShareBaseSchema(BaseModel):
         if dt:
             return dt.strftime('%Y-%m-%dT%H:%M:%SZ')
 
-
 class ShareCreateSchema(ShareBaseSchema):
     pass
 
 class ShareSchema(ShareBaseSchema):
     id: str
+
+class RegistrationOptions(BaseModel):
+    email: str
+
+class VerifyRegistration(BaseModel):
+    email: str
+    att_resp: dict
+
+class AuthenticationOptions(BaseModel):
+    email: str
+
+class VerifyAuthentication(BaseModel):
+    email: str
+    auth_resp: dict
